@@ -53,7 +53,9 @@ namespace <%=$cur_coll.target%> {
 	public sealed class <%=$cur_coll.name%> : IIndexedCollection<% if (!$cur_coll.visitable.nil?) then %>, <%=$cur_coll.visitable%><% end %> {
 
 		IList m_items;
-		<%=$cur_coll.container_impl%> m_container;
+		<%=$cur_coll.container_impl%> m_container;<%
+		if $cur_coll.type == "Instruction" %>
+		public readonly Instruction Outside = new Instruction (OpCodes.Nop);<% end %>
 
 		public <%=$cur_coll.type%> this [int index] {
 			get { return m_items [index] as <%=$cur_coll.type%>; }
