@@ -243,17 +243,26 @@ namespace Mono.Cecil.Cil {
 				switch (i.OpCode.OperandType) {
 				case OperandType.ShortInlineBrTarget:
 				case OperandType.InlineBrTarget:
-					i.Operand = instructions [(int) i.Operand];
+					i.Operand = GetInstruction (body, instructions, (int) i.Operand);
 					break;
 				case OperandType.InlineSwitch:
 					int [] lbls = (int []) i.Operand;
 					Instruction [] instrs = new Instruction [lbls.Length];
 					for (int j = 0; j < lbls.Length; j++)
-						instrs [j] = instructions [lbls [j]] as Instruction;
+						instrs [j] = GetInstruction (body, instructions, lbls [j]);
 					i.Operand = instrs;
 					break;
 				}
 			}
+		}
+
+		Instruction GetInstruction (MethodBody body, IDictionary instructions, int offset)
+		{
+			Instruction instruction = instructions [offset] as Instruction;
+			if (instruction != null)
+				return instruction;
+
+			return body.Instructions.Outside;
 		}
 
 		void ReadSection (MethodBody body, BinaryReader br, IDictionary instructions)
@@ -269,10 +278,10 @@ namespace Mono.Cecil.Cil {
 				for (int i = 0; i < length; i++) {
 					ExceptionHandler eh = new ExceptionHandler (
 						(ExceptionHandlerType) (br.ReadInt16 () & 0x7));
-					eh.TryStart = instructions [Convert.ToInt32 (br.ReadInt16 ())] as Instruction;
-					eh.TryEnd = instructions [eh.TryStart.Offset + Convert.ToInt32 (br.ReadByte ())] as Instruction;
-					eh.HandlerStart = instructions [Convert.ToInt32 (br.ReadInt16 ())] as Instruction;
-					eh.HandlerEnd = instructions [eh.HandlerStart.Offset + Convert.ToInt32 (br.ReadByte ())] as Instruction;
+					eh.TryStart = GetInstruction (body, instructions, Convert.ToInt32 (br.ReadInt16 ()));
+					eh.TryEnd = GetInstruction (body, instructions, eh.TryStart.Offset + Convert.ToInt32 (br.ReadByte ()));
+					eh.HandlerStart = GetInstruction (body, instructions, Convert.ToInt32 (br.ReadInt16 ()));
+					eh.HandlerEnd = GetInstruction (body, instructions, eh.HandlerStart.Offset + Convert.ToInt32 (br.ReadByte ()));
 					switch (eh.Type) {
 					case ExceptionHandlerType.Catch :
 						int token = br.ReadInt32 ();
@@ -282,8 +291,8 @@ namespace Mono.Cecil.Cil {
 							eh.CatchType = m_reflectReader.GetTypeRefAt (GetRid (token));
 						break;
 					case ExceptionHandlerType.Filter :
-						eh.FilterStart = instructions [br.ReadInt32 ()] as Instruction;
-						eh.FilterEnd = instructions [eh.HandlerStart.Previous.Offset] as Instruction;
+						eh.FilterStart = GetInstruction (body, instructions, br.ReadInt32 ());
+						eh.FilterEnd = GetInstruction (body, instructions, eh.HandlerStart.Previous.Offset);
 						break;
 					default :
 						br.ReadInt32 ();
@@ -299,10 +308,10 @@ namespace Mono.Cecil.Cil {
 				for (int i = 0; i < length; i++) {
 					ExceptionHandler eh = new ExceptionHandler (
 						(ExceptionHandlerType) (br.ReadInt32 () & 0x7));
-					eh.TryStart = instructions [br.ReadInt32 ()] as Instruction;
-					eh.TryEnd = instructions [eh.TryStart.Offset + br.ReadInt32 ()] as Instruction;
-					eh.HandlerStart = instructions [br.ReadInt32 ()] as Instruction;
-					eh.HandlerEnd = instructions [eh.HandlerStart.Offset + br.ReadInt32 ()] as Instruction;
+					eh.TryStart = GetInstruction (body, instructions, br.ReadInt32 ());
+					eh.TryEnd = GetInstruction (body, instructions, eh.TryStart.Offset + br.ReadInt32 ());
+					eh.HandlerStart = GetInstruction (body, instructions, br.ReadInt32 ());
+					eh.HandlerEnd = GetInstruction (body, instructions, eh.HandlerStart.Offset + br.ReadInt32 ());
 					switch (eh.Type) {
 					case ExceptionHandlerType.Catch :
 						int token = br.ReadInt32 ();
@@ -312,8 +321,8 @@ namespace Mono.Cecil.Cil {
 							eh.CatchType = m_reflectReader.GetTypeRefAt (GetRid (token));
 						break;
 					case ExceptionHandlerType.Filter :
-						eh.FilterStart = instructions [br.ReadInt32 ()] as Instruction;
-						eh.FilterEnd = instructions [eh.HandlerStart.Previous.Offset] as Instruction;
+						eh.FilterStart = GetInstruction (body, instructions, br.ReadInt32 ());
+						eh.FilterEnd = GetInstruction (body, instructions, eh.HandlerStart.Previous.Offset);
 						break;
 					default :
 						br.ReadInt32 ();
